# mario_ai

./: .gitignore  2-2_FINDINGS.md  8-4_FINDINGS.md  BEAM_SEARCH.md  CLAUDE.md  DESIGN.md  README.md  V4_FINDINGS.md  pyproject.toml
.codeviz/: README.md
bench/: mps_parity.json  snapshot_cost.json  step_rate.json
data/: route.json
learn_papers/: README.md
mario/: __init__.py  actions.py  artifacts.py  buffer.py  dagger.py  env.py  eval.py  goexplore.py  io.py  label.py  levels.py  observation.py  policy.py  ram.py  render.py  reward.py  runner.py  search.py  train.py  value.py  waypoints.py
schemas/: eval.schema.json  game_result.schema.json  result.schema.json
scripts/: bench.py  dagger_generalist.py  diff_status.py  exp_entity.py  explore_84_lower.py  game_runner.py  gate_probe.py  gen_dataset.py  gen_golden.py  gen_value_data.py  goexplore_level.py  pipe_sweep_8_4.py  policy_video.py  probe_22_mouth.py  probe_84_allpipes.py  probe_84_pipe1.py  probe_84_realpipe.py  probe_84_waterpipe.py  probe_level.py  recon_84_detector.py  recon_8_4.py  replay_video.py  run_dagger.py  solve_22.py  solve_22_entry.py  solve_22_land.py  solve_44_descent.py  solve_44_lower.py  solve_72.py  solve_74_seg2.py  solve_84.py  solve_84_chain.py  solve_84_finish.py  solve_84_leg3.py  solve_84_leg4.py  solve_and_stitch.py  solve_area_chain.py  solve_beam.py  solve_castle.py  solve_coverage.py  (+11 more)
tests/: conftest.py  test_artifacts_schema.py  test_buffer.py  test_determinism.py  test_eval_schema.py  test_label.py  test_observation.py  test_reward.py  test_snapshot.py  test_transition.py
(+49 files in other folders)
